# SimpleScript-X

./: CHANGES.md  Changes Log  Changes Log.md  LICENSE  README.md  READ_IF_DEVELOPER.md  SampleProgram1.simplescriptx  commands.json  main.py  pyproject.toml  test.simplescriptx
cython_stuff/: Fast.py  setup.py  simplescriptx.c
